# creative_zone_builder

./: .gitignore  Cargo.toml  README.md
datapack/: pack.mcmeta
datapack/data/cz/functions/: enter.mcfunction  install.mcfunction  leave.mcfunction  loop.mcfunction  st.mcfunction  tp.mcfunction
datapack/data/minecraft/tags/functions/: load.json  tick.json
src/: main.rs
